--- a/app/src/main/res/layout/activity_playlist_songs.xml
+++ b/app/src/main/res/layout/activity_playlist_songs.xml
@@ -39,7 +39,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
-            android:background="@color/offwhite" />
+            android:background="@color/divider_color" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
