--- a/app/src/main/res/drawable/radio_flat_regular.xml
+++ b/app/src/main/res/drawable/radio_flat_regular.xml
@@ -4,5 +4,5 @@
     <corners android:radius="@dimen/_20sdp" />
     <stroke
         android:width="@dimen/_1sdp"
-        android:color="@color/offwhite" />
+        android:color="@color/divider_color" />
 </shape>
