--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -6,7 +6,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/ic_app_logo" />
+            android:src="@drawable/ic_splash_logo" />
     </item>
 
 </layer-list>
