--- a/app/src/main/res/layout/activity_delete_songs.xml
+++ b/app/src/main/res/layout/activity_delete_songs.xml
@@ -26,8 +26,8 @@
 
                 <ImageView
                     android:id="@+id/toolbar_logo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_120sdp"
+                    android:layout_height="@dimen/_40sdp"
                     android:src="@drawable/ic_app_logo" />
 
             </androidx.appcompat.widget.Toolbar>
@@ -37,7 +37,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
-            android:background="@color/offwhite" />
+            android:background="@color/divider_color" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
