--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -27,8 +26,8 @@
 
                 <ImageView
                     android:id="@+id/toolbar_logo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_120sdp"
+                    android:layout_height="@dimen/_40sdp"
                     android:src="@drawable/ic_app_logo" />
 
             </androidx.appcompat.widget.Toolbar>
@@ -38,7 +37,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
-            android:background="@color/offwhite" />
+            android:background="@color/divider_color" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
