--- a/app/src/main/res/layout/bottomsheet_sortby.xml
+++ b/app/src/main/res/layout/bottomsheet_sortby.xml
@@ -32,7 +32,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
-            android:background="@android:color/darker_gray" />
+            android:background="@color/divider_color" />
 
         <LinearLayout
             android:layout_width="match_parent"
