--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,10 @@
     <color name="txt_white35">#59FFFFFF</color>
     <color name="et_background">#282828</color>
 
+    <color name="divider_color">#4B4B4B</color>
+
+
+
 
     <color name="playerBackground">#212529</color>
 
