--- a/app/src/main/res/layout/activity_delete_songs.xml
+++ b/app/src/main/res/layout/activity_delete_songs.xml
@@ -113,6 +113,7 @@
                         android:background="@color/colorPrimary"
                         android:clipToPadding="false"
                         android:divider="@null"
+                        android:paddingBottom="@dimen/_50sdp"
                         android:scrollbarStyle="outsideOverlay"
                         android:scrollbars="vertical" />
                 </LinearLayout>
