--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -62,6 +63,7 @@
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
+            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
@@ -70,6 +72,7 @@
         android:id="@+id/play_screen_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/transparent"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />
 
 </FrameLayout>
