--- a/app/src/main/res/layout/activity_playlist_songs.xml
+++ b/app/src/main/res/layout/activity_playlist_songs.xml
@@ -62,7 +62,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_weight="1"
+                        android:layout_weight=".4"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
@@ -87,7 +87,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="right|center_vertical"
                         android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_weight="1"
+                        android:layout_weight=".6"
                         android:gravity="right|center_vertical"
                         android:orientation="horizontal">
 
@@ -101,7 +101,7 @@
                             android:drawablePadding="@dimen/_5sdp"
                             android:fontFamily="@font/roboto_regular"
                             android:gravity="center_vertical"
-                            android:text="@string/txt_sort_by_name"
+                            android:text="@string/txt_sort_by_nameA2Z"
                             android:textColor="@color/txt_offwhite"
                             android:textSize="@dimen/_11sdp" />
 
@@ -131,6 +131,7 @@
                         android:background="@color/colorPrimary"
                         android:clipToPadding="false"
                         android:divider="@null"
+                        android:paddingBottom="@dimen/_50sdp"
                         android:scrollbarStyle="outsideOverlay"
                         android:scrollbars="vertical" />
                 </LinearLayout>
