--- a/app/src/main/res/layout/activity_search_songs.xml
+++ b/app/src/main/res/layout/activity_search_songs.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".activity.HomeActivity">
+    android:background="@color/colorPrimary">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,14 +18,13 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageViewBack"
                 android:layout_width="@dimen/_45sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:src="@drawable/ic_arrow_back" />
 
-            <androidx.appcompat.widget.AppCompatEditText
+            <com.app.musicplayer.utils.CustomEditText
                 android:id="@+id/et_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -45,7 +42,7 @@
                 android:textSize="@dimen/_12sdp">
 
                 <requestFocus />
-            </androidx.appcompat.widget.AppCompatEditText>
+            </com.app.musicplayer.utils.CustomEditText>
 
         </LinearLayout>
 
@@ -65,6 +62,58 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/layout_topCheckBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left|center_vertical"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:gravity="right|center_vertical"
+                        android:orientation="horizontal">
+
+                        <androidx.appcompat.widget.AppCompatCheckBox
+                            android:id="@+id/cb_delete"
+                            style="@style/checkBoxStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:button="@drawable/cb_selector"
+                            android:buttonTint="@color/checkbox_tint" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_weight="1"
+                        android:gravity="right|center_vertical"
+                        android:orientation="horizontal">
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/txt_done"
+                            style="@style/txt_white_style"
+                            android:layout_width="match_parent"
+                            android:layout_gravity="right|center_vertical"
+                            android:fontFamily="@font/roboto_medium"
+                            android:gravity="right|center_vertical"
+                            android:text="@string/txt_DONE"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="@dimen/_11sdp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/layout_listView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -78,6 +127,7 @@
                         android:background="@color/colorPrimary"
                         android:clipToPadding="false"
                         android:divider="@null"
+                        android:paddingBottom="@dimen/_50sdp"
                         android:scrollbarStyle="outsideOverlay"
                         android:scrollbars="vertical" />
                 </LinearLayout>
@@ -100,6 +150,71 @@
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_bottomButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/colorPrimary"
+        android:gravity="bottom"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnDelete"
+            style="@style/Widget.MaterialComponents.Button.Icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:fontFamily="@font/roboto_regular"
+            android:gravity="bottom|center"
+            android:text="@string/txt_delete"
+            android:textAllCaps="false"
+            android:textColor="@color/txt_offwhite"
+            android:textFontWeight="500"
+            android:textSize="@dimen/_10sdp"
+            android:theme="@style/MaterialButton"
+            app:backgroundTint="@color/colorPrimary"
+            app:icon="@drawable/selector_ic_delete"
+            app:iconGravity="top" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnRestore"
+            style="@style/Widget.MaterialComponents.Button.Icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:fontFamily="@font/roboto_regular"
+            android:gravity="bottom|center"
+            android:text="@string/txt_restore"
+            android:textAllCaps="false"
+            android:textColor="@color/txt_offwhite"
+            android:textFontWeight="500"
+            android:textSize="@dimen/_10sdp"
+            android:theme="@style/MaterialButton"
+            app:backgroundTint="@color/colorPrimary"
+            app:icon="@drawable/ic_restore"
+            app:iconGravity="top" />
+
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/colorAccent"
+        android:gravity="bottom|end"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_delete_fab"
+        app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
