--- a/app/src/main/res/layout/activity_trashed_songs.xml
+++ b/app/src/main/res/layout/activity_trashed_songs.xml
@@ -22,6 +22,7 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorPrimary"
                 android:elevation="0dp"
+                android:layout_marginStart="@dimen/_minus15sdp"
                 app:popupTheme="@style/Theme.MusicPlayer.PopupOverlay">
 
                 <ImageView
@@ -124,7 +125,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_weight="1"
+                        android:layout_weight=".6"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
@@ -138,7 +139,7 @@
                             android:gravity="center_vertical"
                             android:layout_gravity="center_vertical"
                             android:fontFamily="@font/roboto_regular"
-                            android:text="@string/txt_sort_by_name"
+                            android:text="@string/txt_sort_by_nameA2Z"
                             android:textColor="@color/txt_offwhite"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -148,7 +149,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="right|center_vertical"
                         android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_weight="1"
+                        android:layout_weight=".4"
                         android:gravity="right|center_vertical"
                         android:orientation="horizontal">
 
@@ -178,6 +179,7 @@
                         android:background="@color/colorPrimary"
                         android:clipToPadding="false"
                         android:divider="@null"
+                        android:paddingBottom="@dimen/_50sdp"
                         android:scrollbarStyle="outsideOverlay"
                         android:scrollbars="vertical" />
                 </LinearLayout>
