--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -23,7 +23,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:layout_weight=".4"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:layout_weight="1"
+                android:layout_weight=".6"
                 android:gravity="right|center_vertical"
                 android:orientation="horizontal">
 
@@ -57,13 +57,13 @@
                     android:id="@+id/txt_sort"
                     style="@style/txt_white_style"
                     android:layout_width="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:drawableRight="@drawable/selector_ic_dropdown"
                     android:drawablePadding="@dimen/_5sdp"
-                    android:gravity="center_vertical"
-                    android:layout_gravity="center_vertical"
                     android:fontFamily="@font/roboto_regular"
-                    android:text="@string/txt_sort_by_name"
+                    android:gravity="center_vertical"
+                    android:text="@string/txt_sort_by_nameA2Z"
                     android:textColor="@color/txt_offwhite"
                     android:textSize="@dimen/_11sdp" />
 
@@ -87,22 +87,16 @@
             android:orientation="vertical"
             android:visibility="gone">
 
-            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@+id/swipe"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/listView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/listView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorPrimary"
-                    android:clipToPadding="false"
-                    android:divider="@null"
-                    android:scrollbarStyle="outsideOverlay"
-                    android:scrollbars="vertical" />
-
-            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                android:clipToPadding="false"
+                android:divider="@null"
+                android:paddingBottom="@dimen/_50sdp"
+                android:scrollbarStyle="outsideOverlay"
+                android:scrollbars="vertical" />
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
