--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -89,6 +89,58 @@
         </RadioGroup>
 
         <LinearLayout
+            android:id="@+id/layout_topCheckBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:gravity="right|center_vertical"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatCheckBox
+                    android:id="@+id/cb_delete"
+                    style="@style/checkBoxStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/cb_selector"
+                    android:buttonTint="@color/checkbox_tint" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:layout_weight="1"
+                android:gravity="right|center_vertical"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/txt_done"
+                    style="@style/txt_white_style"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="right|center_vertical"
+                    android:fontFamily="@font/roboto_medium"
+                    android:gravity="right|center_vertical"
+                    android:text="@string/txt_DONE"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/_11sdp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/layout_topListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -103,7 +155,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:layout_weight=".4"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -128,7 +180,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:layout_weight="1"
+                android:layout_weight=".6"
                 android:gravity="right|center_vertical"
                 android:orientation="horizontal">
 
@@ -142,7 +194,7 @@
                     android:drawablePadding="@dimen/_5sdp"
                     android:fontFamily="@font/roboto_regular"
                     android:gravity="center_vertical"
-                    android:text="@string/txt_sort_by_name"
+                    android:text="@string/txt_sort_by_nameA2Z"
                     android:textColor="@color/txt_offwhite"
                     android:textSize="@dimen/_11sdp" />
 
@@ -165,22 +217,16 @@
             android:orientation="vertical"
             android:visibility="gone">
 
-            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@+id/swipe"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/listView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/listView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorPrimary"
-                    android:clipToPadding="false"
-                    android:divider="@null"
-                    android:scrollbarStyle="outsideOverlay"
-                    android:scrollbars="vertical" />
-
-            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                android:clipToPadding="false"
+                android:divider="@null"
+                android:paddingBottom="@dimen/_50sdp"
+                android:scrollbarStyle="outsideOverlay"
+                android:scrollbars="vertical" />
         </LinearLayout>
 
         <LinearLayout
@@ -217,7 +263,7 @@
                 android:gravity="center"
                 android:singleLine="false"
                 android:text="@string/txt_no_songs"
-                android:textColor="@color/txt_white35"
+                android:textColor="@color/txt_white75"
                 android:textFontWeight="400" />
 
         </LinearLayout>
@@ -225,12 +271,25 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/colorAccent"
+        android:gravity="bottom|end"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_delete_fab"
+        app:tint="@color/white" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="@dimen/_55sdp"
+        android:layout_marginBottom="@dimen/fab_margin"
         android:backgroundTint="@color/colorAccent"
         android:gravity="bottom|end"
         app:srcCompat="@android:drawable/ic_input_add"
