--- a/app/src/main/res/xml/play_screen_motion_scene.xml
+++ b/app/src/main/res/xml/play_screen_motion_scene.xml
@@ -7,10 +7,10 @@
         app:motionInterpolator="easeInOut"
         motion:constraintSetEnd="@id/play_screen_expanded_normal"
         motion:constraintSetStart="@id/play_screen_minimized"
-        motion:duration="300">
+        motion:duration="0">
         <OnSwipe
             app:dragDirection="dragUp"
-            app:maxAcceleration="200"
+            app:maxAcceleration="100"
             app:touchAnchorId="@+id/player_background_view"
             app:touchAnchorSide="top" />
 
@@ -216,7 +216,7 @@
         </Constraint>
 
         <Constraint
-            android:id="@id/btn_refresh"
+            android:id="@id/btn_playMode"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_gravity="center"
@@ -233,7 +233,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="@id/play_pause_layout"
             app:layout_constraintEnd_toStartOf="@id/play_pause_layout"
-            app:layout_constraintStart_toEndOf="@id/btn_refresh"
+            app:layout_constraintStart_toEndOf="@id/btn_playMode"
             app:layout_constraintTop_toTopOf="@id/play_pause_layout" />
         <Constraint
             android:id="@id/play_pause_top_space"
@@ -269,11 +269,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="@id/play_pause_layout"
-            app:layout_constraintEnd_toStartOf="@id/btn_equilizer"
+            app:layout_constraintEnd_toStartOf="@id/btn_queue"
             app:layout_constraintStart_toEndOf="@id/play_pause_layout"
             app:layout_constraintTop_toTopOf="@id/play_pause_layout" />
         <Constraint
-            android:id="@id/btn_equilizer"
+            android:id="@id/btn_queue"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_gravity="center"
@@ -430,7 +430,7 @@
             app:layout_constraintTop_toBottomOf="@id/player_background_view" />
 
         <Constraint
-            android:id="@id/btn_refresh"
+            android:id="@id/btn_playMode"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_gravity="center"
@@ -441,7 +441,7 @@
             app:layout_constraintTop_toTopOf="@id/play_pause_layout" />
 
         <Constraint
-            android:id="@id/btn_equilizer"
+            android:id="@id/btn_queue"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_gravity="center"
