--- a/app/src/main/res/layout/adapter_songs_trashed.xml
+++ b/app/src/main/res/layout/adapter_songs_trashed.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_marginRight="@dimen/_10sdp"
         android:button="@drawable/cb_selector_white"
         android:gravity="center_vertical"
         android:visibility="gone" />
@@ -21,8 +22,7 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageView"
         android:layout_width="@dimen/_40sdp"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginLeft="@dimen/_10sdp" />
+        android:layout_height="@dimen/_40sdp" />
 
     <LinearLayout
         android:layout_width="0dp"
