--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,7 +49,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:singleLine">true</item>
-        <item name="android:textSize">@dimen/_13sdp</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@drawable/selector_ripple</item>
         <item name="android:fontFamily">@font/roboto_bold</item>
